syntax = "proto3";

// Additional imports go here

package api.v1;

option go_package = "github.com/RedHatInsights/authz/proto/gen/go/core/v1;core";

// Service & message definitions go here

message CheckPermissionRequest {
  string subject = 1;
  string operation = 2;
  string resourcetype = 3;
  string resourceid = 4;
}

message CheckPermissionResponse {
    bool result = 1;
    string description = 2;
}

service CheckPermission {
    rpc CheckPermission (CheckPermissionRequest) returns (CheckPermissionResponse) {}
}